Update to latest panama-jextract API